ingress-argocd.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "iotb-device-control-ingress"
  namespace: thangtd18
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - backend:
            service:
              name: argocd-server
              port:
                number: 80
          path: /
          pathType: Prefix
